# n-puzzle

./: Cargo.toml  author  hard4  package-lock.json  package.json  test3  test4  test5  test6  test7
inputs/: input3  input5  input7
public/: index.html
src/: App.svelte  heuristics.rs  input.rs  lib.rs  main.rs
src/components/: Todos.svelte
src/structs/: data.rs  mod.rs  node.rs  puzzle.rs
